# fastapi_jwt

./: .env  .env.example  pyproject.toml  test.db
app/: app.py  database.py  deps.py  model.py  schemas.py  utils.py
