[project]
name = "fastapi-jwt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.45",
]
